--- a/nemukerja/templates/contact.html
+++ b/nemukerja/templates/contact.html
@@ -79,7 +79,7 @@
                                     <span data-i18n="email_en">Email</span>
                                     <span data-i18n="email_id" class="d-none">Email</span>
                                 </h6>
-                                <p class="contact-detail">support@nemukerja.com</p>
+                                <p class="contact-detail">nemukerjaofficial@gmail.com</p>
                             </div>
                         </div>
 
